--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,14 @@
   color: #fff;
 }
 
+.mt32{
+  margin-top: 32px;
+}
+
+.mb35{
+  margin-bottom: 35px;
+}
+
 .btn {
   background: linear-gradient(90.35deg, #2563EB 0.36%, #D946EF 201.02%);
   border-radius: 5px;
@@ -125,7 +133,7 @@ body {
   top: 0;
 }
 
-/* ********** */
+/* *********************************** */
 
 .our-service{
 	width: 1170px;
@@ -195,6 +203,8 @@ p, a{
 	margin-bottom: 30px;
 }
 
+/* *********************************** */
+
 .product_desc{
 	width: 1200px;
 	margin: 115px;
@@ -227,7 +237,15 @@ padding: 7px 15px;
 border: none;
 }
 
-.team_staff div{
+/* *********************************** */
+
+.team_container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.team_container div{
 	border: 1px solid #FFFFFF14;
 	width: 270px;
 	text-align: center;
@@ -239,4 +257,14 @@ border: none;
 		rgba(255, 255, 255, 0.018) 104.89%);
 	box-shadow: 0px 22px 18px rgba(0, 0, 0, 0.05);
 	border-radius: 34px;
+  margin: 40px 15px 0px;
 }
+
+.team_text{
+	text-align: center;
+}
+
+.team_text h1{
+  padding-bottom: 30px;
+}
+
