--- a/src/css/style.css
+++ b/src/css/style.css
@@ -268,3 +268,36 @@ border: none;
   padding-bottom: 30px;
 }
 
+/* **************************************** */
+
+.newspaper{
+  display: flex;
+  justify-content: center;
+}
+
+.newspaper div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(180deg, rgba(254, 254, 255, 0.0145) 0%, rgba(255, 255, 255, 0.02) 100%);
+  box-shadow: 0px 22px 18px rgba(0, 0, 0, 0.05);
+  border-radius: 34px;
+  width: 1170px;
+  margin-top: 120px;
+  padding: 50px 0 38px;
+}
+
+input{
+  background: linear-gradient(180deg, rgba(254, 254, 255, 0.0348) 0%, rgba(255, 255, 255, 0.048) 100%);
+  box-shadow: 10px 24px 54px rgba(0, 0, 0, 0.07);
+  border-radius: 70px;  
+border: none;
+width: 860px;
+font-family: 'Rubik';
+font-size: 18px;
+line-height: 30px;
+color: #FFFFFF;
+opacity: 0.9;
+padding: 25px 616px 25px 44px;
+}
